src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Solicitation_Stage_Code__c</fullName>
        <inlineHelpText>Where are we in the solicitation process (7 Steps to a Major Gift)?</inlineHelpText>
        <label>Solicitation Stage Code</label>
        <picklist>
            <picklistValues>
                <fullName>Identification</fullName>
                <color>#F3D904</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Developed</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Discussion - First Meeting</fullName>
                <color>#FF99FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Discussion - Cultivation</fullName>
                <color>#CC66CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Discussion - LOI</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Discussion - Concept Note</fullName>
                <color>#993399</color>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Discussion - Proposal Development</fullName>
                <color>#663366</color>
            </picklistValues>
            <picklistValues>
                <fullName>Solicited</fullName>
                <color>#000099</color>
            </picklistValues>
            <picklistValues>
                <fullName>Gift</fullName>
                <color>#33FF33</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
                <color>#999999</color>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Staff_Solicitor__c</fullName>
        <inlineHelpText>Rare President, Vice President, Regional Director, Program Director, or other staff taking part in the solicitation</inlineHelpText>
        <label>Staff Solicitor</label>
        <picklist>
            <picklistValues>
                <fullName>Brett Jenks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Martha Piper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dale Galvin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Butler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Mayoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keith Alger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Watkins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Walker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taufiq Alimi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rocky Sanchez Tirona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jiakai Yuan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gerald Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eric Coppenger</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Technical_Advisor__c</fullName>
        <inlineHelpText>(May be more than one if there are multiple projects/regions) Helps to develop programmatic “product” Rare pitches, participates in formulation of strategy, provides program reports,facilitates communications b/t donor and field as appropriate.</inlineHelpText>
        <label>Technical Advisor</label>
        <picklist>
            <picklistValues>
                <fullName>Dale Galvin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brett Jenks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nigel Sizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sean Southey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ann Nichols</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megan Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Butler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cynthia Brown Mayoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laurie Wilkison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keith Alger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lark Dunham</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Theme_s__c</fullName>
        <label>Potential Cohort Themes</label>
        <picklist>
            <picklistValues>
                <fullName>Birds – Shorebirds, Tropical Birds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Change– REDD, Stoves, Adaptation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empty Forests – Hunting &amp; Bushmeat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshwater Ecosystem Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Habitat Loss &amp; Degradation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceans – Over &amp; destructive fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <inlineHelpText>Time frame for Solicitation:
Tier 1 – This year for sure.
Tier 2 – Solicit in the next 2 years.
Tier 3 – Solicit in 3 years.
Tier 4 – Solicit during next 5 year period.</inlineHelpText>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_50_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top 50 Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <inlineHelpText>The best person(s) to solicit the prospect who is/are a non-employee</inlineHelpText>
        <label>Volunteer</label>
        <picklist>
            <picklistValues>
                <fullName>Amanda Paulson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annie Simonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbara Hernandez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Hill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duncan McFarland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edith McBean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Soule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gustavo A.B. da Fonseca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hannelore Grantham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan Portman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeremy Grantham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph Ellis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenneth Berlin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lois Morrison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nancy Mackinnon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Ridgley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Pasquier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruth Yeoh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Amero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephanie Meeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve Gaines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vadim Nikitine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wendy Paulson</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pexmaps__Billing_County__c</fullName>
        <label>Billing County</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Billing_Geocode_Accuracy__c</fullName>
        <label>Billing Geocode Accuracy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Billing_Geocode_Address__c</fullName>
        <label>Billing Geocode Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pexmaps__Billing_Geocode_Status__c</fullName>
        <label>Geocode Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Billing_Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Billing_Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__County__c</fullName>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Shipping_County__c</fullName>
        <label>Shipping County</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Shipping_Geocode_Accuracy__c</fullName>
        <label>Shipping Geocode Accuracy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Shipping_Geocode_Address__c</fullName>
        <label>Shipping Geocode Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pexmaps__Shipping_Geocode_Status__c</fullName>
        <label>Geocode  Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Shipping_Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Shipping_Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllDonors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Donors</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Donor_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Donor/Partners</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Amy_s_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Regions__c</columns>
        <columns>Countries__c</columns>
        <columns>Applying_for_Cohorts__c</columns>
        <columns>Accepted_Cohorts__c</columns>
        <columns>Cohorts_Involved_With__c</columns>
        <columns>Segment__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Doherty</value>
        </filters>
        <label>Amy&apos;s Partners</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Bogor_6</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Applying_for_Cohorts__c</field>
            <operation>includes</operation>
            <value>Bogor 6</value>
        </filters>
        <label>Bogor 6</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brooke_s_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Regions__c</columns>
        <columns>Countries__c</columns>
        <columns>Applying_for_Cohorts__c</columns>
        <columns>Accepted_Cohorts__c</columns>
        <columns>Cohorts_Involved_With__c</columns>
        <columns>Segment__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Brooke</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Sadowsky</value>
        </filters>
        <label>Brooke&apos;s Partners</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chaissa_s_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Chedilyn</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Dulguime</value>
        </filters>
        <label>Chaissa&apos;s Partners</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonorsOwnedbyAndrzej</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Donor_Strategy__c</columns>
        <columns>Final_Proposal_Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Andrzej,noel</value>
        </filters>
        <label>Donors Owned by Andrzej and Noel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonorsOwnedbyAnnNichols</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Nichols</value>
        </filters>
        <label>Donors Owned by Ann Nichols</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonorsOwnedbyCarmen</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Carmen</value>
        </filters>
        <label>Donors Owned by Carmen</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonorsOwnedbyLaurie</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Laurie</value>
        </filters>
        <label>Donors Owned by Laurie</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonorsOwnedbyLindsay</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Lindsay</value>
        </filters>
        <label>Donors Owned by Lindsay</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonorsOwnedbyNoel</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Noel</value>
        </filters>
        <label>Donors Owned by Noel</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DonorsOwnedbyShiyang</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Shiyang</value>
        </filters>
        <label>Donors Owned by Shiyang</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Donors_Owned_by_Elan</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Elan</value>
        </filters>
        <label>Donors Owned by Elan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Dulce_s_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Regions__c</columns>
        <columns>Countries__c</columns>
        <columns>Applying_for_Cohorts__c</columns>
        <columns>Accepted_Cohorts__c</columns>
        <columns>Cohorts_Involved_With__c</columns>
        <columns>Segment__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Espelosin</value>
        </filters>
        <label>Dulce&apos;s Partners</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Corporation</fullName>
        <active>true</active>
        <label>Corporation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Donor</fullName>
        <active>true</active>
        <description>Donor to Rare</description>
        <label>Donor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Funding_Partner</fullName>
        <active>true</active>
        <description>Provides significant cash funding at cohort level (~50%+ of total cost)</description>
        <label>Funding Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>Implementing_Partner</fullName>
        <active>true</active>
        <description>Implements one or more campaigns at site level (i.e. has staff on ground, some in-kind or match funding)</description>
        <label>Implementing Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>NGO_Partner</fullName>
        <active>true</active>
        <label>NGO/Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Partner</fullName>
        <active>true</active>
        <description>Provides strategic support on Theory of Change design and/or cohort development (including co-fundraising for cohort)</description>
        <label>Strategic Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technical_Partner</fullName>
        <active>true</active>
        <description>Implements other technical component at one or more sites (i.e. has staff on ground; maybe some in-kind or match funding)</description>
        <label>Technical Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Rare service provider, not providing direct programmatic support (i.e. IT vendors)</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>